# antares

./: .gitignore  .openclaude-profile.json  AGENTS.md  AVISO_DE_CORTE_TEMPLATE.xlsx  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  _temp_extract_docx.py  append_css.py  aviso-volanteo-panel.docx  backend_stderr.txt  backend_stdout.txt  cambios_auditoria_simplificaciones.md  electron-builder.yml  entrypoint.py  opencode.json  package-lock.json  package.json  plantilla_aniegos_ate.xlsx  pyproject.toml  replace_icons.py  requirements.txt  skills-lock.json  update_logos.py  update_logos_indiv.py
.factory/: settings.json
.githooks/: pre-push
.github/: dependabot.yml
assets/: app.icns
backend/: __init__.py  backend.spec  bootstrap.py  handlers.py  ipc_protocol.py  main.py  version.py
data/: technical_reports.json
docs/: AUDIT-PROMP.md  AUTO_UPDATE.md  DIAGNOSTIC_REPORT.md  audit-checklist.md  audit-results.md  historial.md
electron/: auth-storage.js  auto-updater.js  backend-command.js  backend-spawner.js  dialog-handlers.js  ipc-methods.js  ipc-router.js  ipc-stdout-parser.js  logo-storage.js  main.js  path-params.js  preload.js  vouched-paths.js  window-manager.js
formatos/: catalog.json  maquina.b64  televisiva.b64  template-d.b64
frontend/: .env.example  index.html  package-lock.json  package.json  scratch_read_xlsx.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
issues/: issues_pendientes_auditoria.md
scratch/: create_template.py  rendered.html  smoke_test_history.py  test_pdf.py
scripts/: build-backend.js  bump-version.js  clean-after-package.js  clean-dist-electron.js  clean.js  commit-audit-issues.js  enable-build-signing.js  generate_brand_assets.py  install-hooks.js  pr-fix-loop.js  push-loop.js  release-loop.js
shared/: config.js  config.ts  html-sanitizer.d.ts  html-sanitizer.js
src/: __main__.py
tests/: aviso.xlsx  test-backend-heavy-methods-sync.js  test-backend-spawner-handshake.js  test-backend-spawner-health.js  test-backend-spawner-midflight-exit.js  test-backend-spawner-recovery.js  test-backend-spawner-shutdown.js  test-backend-spawner.js  test-build-size-guards.js  test-electron-auth-storage.js  test-electron-dialogs.js  test-electron-ipc-allowlist.js  test-electron-ipc-stdout-parser.js  test-electron-logo-storage.js  test-electron-menu.js  test-electron-path.js  test-electron-preload.js  test-electron-version.js  test-enable-build-signing.js  test-health-probe-skip-during-requests.js  test-html-csp-meta.js  test-html-sanitizer.js  test-ipc-router-prepare-params.js  test-pr-fix-loop.js  test-push-loop.js  test-version-sync.js  test-vouched-paths.js  test_backend_bootstrap.py  test_backend_main.py  test_config_fields.py  test_config_theme.py  test_conversion_mapping.py  test_conversion_record_sequence.py  test_conversion_scheduler.py  test_converter.py  test_database.py  test_database_mapping.py  test_db_indexes.py  test_encoding.py  (+39 more)
(+459 files in other folders)
