# pyproject.toml
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[project]
name = "hidro-convert-backend"
version = "0.10.4"
description = "Backend for ANTARES - Image conversion and renaming"
authors = [
    {name = "ANTARES", email = "dev@antares.app"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "Jinja2>=3.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pypdf>=5.0.0",
    "pymupdf>=1.24.0",
    "weasyprint>=60.0",
    "python-docx>=1.1.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"backend/main.py" = ["E402"]
"tests/test_db_indexes.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
